# soft-actor-critic

./: .gitignore  LICENSE.md  README.md  requirements.txt  setup.cfg
checkpoints/SAC_20210504_152750_LunarLanderContinuous-v2_lr0.0003/: actor.pt  critic.pt
soft_actor_critic/: __init__.py  __main__.py  agent.py  critic.py  evaluate.py  memory.py  policy.py  train.py  utilities.py
tests/: test_evaluate.py  test_lunar_lander.py  test_mountain_car.py  test_pendulum.py  test_train.py
