[metadata]
name = soft-actor-critic
version = 1.0.0
description = Soft actor critic implementation using Pytorch
author = Thomas Hirtz
url = https://github.com/thomashirtz/pytorch-soft-actor-critic

[options]
install_requires =
    torch
    numpy
    pathlib2
packages = find:

[options.packages.find]
exclude = tests*
